--- a/estilo.css
+++ b/estilo.css
@@ -5,7 +5,7 @@
 }
 /*#FFEDD5 cor original do body*/
 body {
-  background: url(/Projeto_ThiagoC/imagens/cafeteria5.png);
+  background: url(/imagens/cafeteria5.png);
   image-rendering: auto;
   font-family: 'Roboto', sans-serif;
   background-position: center;
